Fixed overflow problem

--- a/meme generator/main.css
+++ b/meme generator/main.css
@@ -17,8 +17,10 @@
 }
 .bottom-text{
   position: absolute;
+  bottom: 5px;
   left: 10px;
   right: 10px;
+  overflow: hidden;
   color: white;
   text-shadow: 2px 2px 4px black;
   font-size: 30px;
